updated api endpoints and added query layer method
